# rust-api

./: Cargo.toml  env
src/: auth.rs  controllers.rs  errors.rs  main.rs  models.rs  services.rs
test/: api_test.rs
