[package]
name = "dodolan_20260111"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "mysql", "macros", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "macros"] }
dotenvy = "0.15"
chrono = { version = "0.4.43", features = ["serde"] }
thiserror = "2.0.18"
env_logger = "0.11"
log = "0.4"
jsonwebtoken = {version = "10.2.0", features = ["rust_crypto"] }
bcrypt = "0.18.0"
actix-web-httpauth = "0.8" # Memudahkan penanganan skema Bearer Auth
uuid = { version = "1.10", features = ["v4", "serde"] } # Enables V4 generation and Serde support